Choose desktop interstitial layout for medium views
We should choose the desktop layout over the mobile layout interstitials
for middle-sized views, since we're switching to the desktop layout too
soon.

This CL changes the threshold from height = 736px to 560px and removes
the extra margin on the details element. Together, these changes help
improve transitions between mobile and desktop:

 - We use the desktop layout for more middle view sizes, and we can
   display more of the details because we're wasting less space with
   padding
 - When we switch to mobile layout, the "Details" button is in nearly
   the same vertical spot as it would've been in desktop layout (it
   only moves 35px lower).
 - Clicking "details" in the desktop layout usually shows at least a
   tiny bit of the details on the screen. This serves as a visual cue
   that the user needs to scroll to see all the content. Otherwise, the
   "details" button looks as if it doesn't do anything.

TBR=ntfschr@chromium.org

(cherry picked from commit 0687e79ab104d3311e84b4a0de5b05eef7c234e4 [formerly a44afd2d732a3192329ea398ec030eab6cfe3aeb])

Test: Manual - compared screenshots
Bug: 726913
Change-Id: I326047767da1660eb5a9dc272551676819eaaa82
Reviewed-on: https://chromium-review.googlesource.com/518544
Commit-Queue: Nate Fischer <ntfschr@chromium.org>
Reviewed-by: Nathan Parker <nparker@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#477080}
Reviewed-on: https://chromium-review.googlesource.com/526477
Reviewed-by: Nate Fischer <ntfschr@chromium.org>
Cr-Commit-Position: refs/branch-heads/3112@{#211}
Cr-Branched-From: 07faed0551ea9474531c25080552dfc7bccfa9e8 [formerly b6460e24cf59f429d69de255538d0fc7a425ccf9]-refs/heads/master@{#474897}
Former-commit-id: 6bcf1f9a352f42fb145a11c214439ff0567e28a8

--- a/components/security_interstitials/core/browser/resources/interstitial_v2.css
+++ b/components/security_interstitials/core/browser/resources/interstitial_v2.css
@@ -65,7 +65,7 @@ button:hover {
 
 #details {
   color: #696969;
-  margin: 45px 0 50px;
+  margin: 0 0 50px;
 }
 
 #details p:not(:first-of-type) {
@@ -315,7 +315,7 @@ input[type=checkbox]:checked ~ .checkbox::before {
 @media (min-width: 240px) and (max-width: 420px) and
        (min-height: 401px),
        (min-width: 421px) and (min-height: 240px) and
-       (max-height: 736px) {
+       (max-height: 560px) {
   body .nav-wrapper {
     background: #f7f7f7;
     bottom: 0;
@@ -348,7 +348,7 @@ input[type=checkbox]:checked ~ .checkbox::before {
 }
 
 @media (max-width: 420px) and (orientation: portrait),
-       (max-height: 736px) {
+       (max-height: 560px) {
   body {
     margin: 0 auto;
   }
@@ -435,7 +435,7 @@ input[type=checkbox]:checked ~ .checkbox::before {
   }
 }
 
-@media (min-width: 421px) and (min-height: 500px) and (max-height: 736px) {
+@media (min-width: 421px) and (min-height: 500px) and (max-height: 560px) {
   .interstitial-wrapper {
     margin-top: 10vh;
   }
